--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10942,3 +10942,15 @@ a.text-dark:focus {
   }
 }
 
+.border-row {
+  border: 2px solid black;
+  margin-bottom: 20px;
+  padding: 10px 0 10px 0;
+}
+
+.border-row .title-post {
+  color: red;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
