--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,4 +7,8 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+//icons
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
 @import "home";
+@import "post";
