--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,5 +10,9 @@
 //icons
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-@import "home";
 @import "post";
+
+body {
+    background-color: black;
+    font-family: Calibri, "Trebuchet MS", sans-serif;
+}
