--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12332,25 +12332,26 @@ a.text-dark:focus {
   }
 }
 
-.border-row {
-  border: 2px solid black;
-  margin-bottom: 20px;
-  padding: 10px 0 10px 0;
-}
-
-.border-row .title-post {
-  color: red;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
 .posts-cont {
-  background-color: white;
+  background-color: black;
 }
 
 .posts-cont .title-post {
-  color: red;
+  color: #ff0000;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.posts-cont .text-post {
+  color: white;
+}
+
+.posts-cont img {
+  width: 50%;
+}
+
+body {
+  background-color: black;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
 }
 
