--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,6 @@
 @import "post";
 
 body {
-    background-color: black;
+    background-color: #bfffff;
     font-family: Calibri, "Trebuchet MS", sans-serif;
 }
