--- a/resources/sass/_post.scss
+++ b/resources/sass/_post.scss
@@ -1,14 +1,14 @@
 .posts-cont {
-    background-color: rgb(0, 0, 0);
+    background-color: #ccffcc;
 
     .title-post {
-        color: #ff0000;
+        color: #ff80cc;
         font-weight: 700;
         text-transform: uppercase;
     }
 
     .text-post {
-        color: white;
+        color: #000000;
     }
 
     img {
