--- a/resources/sass/_post.scss
+++ b/resources/sass/_post.scss
@@ -11,7 +11,8 @@
         color: #000000;
     }
 
-    img {
-        width: 50%;
+    .image-tab {
+        max-width: 200px;
+        width: 100%;
     }
 }
